# TC_code

./: .gitignore  .gitmodules  README.md
compiler/: README.md  design.md  main_dgl.py  main_pyg.py
cppdram/: CMakeLists.txt  dram.trace
cppdram/src/: Config.h  Controller.h  DRAM.h  HBM.cpp  HBM.h  Main.cpp  Memory.h  Processor.h  Refresh.h  Request.h  Scheduler.h  StatType.cpp  StatType.h  Statistics.h
cppevent/: CMakeLists.txt  clean.sh  main_execution.cpp  main_partitioning.cpp  main_partitioning.h
cppevent/algorithm/: README.md  instruction_set.cpp  instruction_set.h
cppevent/algorithm/model/: gat.model  gcn.model  ggnn.model  sage-temp.model  sage.model
cppevent/configs/: config.cpp  config.h  parallel.h  shard.h  strings.h
cppevent/hardware/: arch_top.cpp  arch_top.h  helps.cpp  helps.h
cppevent/hardware/compute/: compute.cpp  compute.h  matrix_unit.cpp  matrix_unit.h  vector_unit.cpp  vector_unit.h
cppevent/hardware/control/: ctrl_decode.cpp  ctrl_decode.h  ctrl_top.cpp  ctrl_top.h
cppevent/hardware/memory/: load_store.cpp  load_store.h  mem_top.cpp  mem_top.h
cppevent/hardware/memory/database/: shard_holder.cpp  shard_holder.h
cppevent/hardware/memory/embedding/: buffer.cpp
cppevent/hardware/memory/ramulator/: Controller.cpp  Controller.h  DSARP.cpp  GDDR5.cpp  Refresh.h  Request.h
cppevent/hardware/message/: message.h
cppevent/hardware/shard/: shard_buffer.cpp  shard_buffer.h
cppevent/preprocessing/: graph_loader.cpp  graph_loader.h  read_edgelist.cpp  read_edgelist.h  shard_generator.cpp  shard_generator.h
cppevent/preprocessing/partitioning/: regular.cpp  regular.h  row.cpp  sparse.cpp  sparse.h
cppevent/result/: extract.py
cppevent/scripts/: eval_base.sh  eval_explore.sh  eval_partitioning.sh  eval_stream.sh  eval_thread.sh  eval_vu_balance.sh  glue.sh
cppmain/: CMakeLists.txt  build.sh  clion_cpp_style.xml  main_bitmap.cpp  main_partition.cpp  main_partition.h
hooks/: pre-commit
markdown/: gcc.md  tensorflow2.md
partition/: check_tiles.py  visualization.py
profiling/: check_preprocess.py  preprocess_mtx.py  preprocess_pyg.py  visualize.py
verification/: dgl_gat.py  dgl_ggnn.py  dgl_main.py  dgl_r_gcn.py  dgl_sage.py  dgl_test.py
(+104 files in other folders)
